# FiSH-irssi

src/: CMakeLists.txt  main.c
